- updating to jersey 1.13 - kickstarter does not need security manager any longer - adding provider as shown in the jersey documentation