@@ -1,2 +1,2 @@
-java -splash:splashscreen.gif -Djava.security.manager -Djava.security.policy=all_allowed.policy -cp "lib\*;" de.hu_berlin.german.korpling.annis.kickstarter.MainFrame
+java -splash:splashscreen.gif -cp "lib\*;" de.hu_berlin.german.korpling.annis.kickstarter.MainFrame
 pause
